 - moved Spring.SetUnitRulesParam, Spring.SetTeamRulesParam, Spring.SetGameRulesParam from LuaRules-only to LuaSyncedCtrl
 - removed evaluator functions from LuaOpengl
 - removed Spring.MakeFont
 - removed Spring.SetRulesInfoMap, Spring.GetRulesInfoMap, Script.GetConfigString
 - removed Spring.CreateUnitRulesParams, Spring.CreateTeamRulesParams, Spring.CreateGameRulesParams

Engine / Unit Scripts:
 - LUS: SetSignalMask raises error now when called outside thread
 - LUS: Signal/SetSignalMask support arbitrary objects as `signal names' now, bitwise logic is still applied to numbers
 - LUS: _G in a Lua Unit Script points to the environment of that Lua Unit Script now
 - LUS: TargetWeight and BlockShot are actually called now
 - COB: Added KSIN (135, 1024*sin(x)), KCOS (136), KTAN (137) and SQRT (138) get constants.

Interface:
 - fixed middle click scroll speed on linux
 - added new MiddleClickScrollSpeed option
 - more responsive mouse movement
 - made it easier to select units in factories
 - added new command "/buildwarnings [0|1]", analogous to "/movewarnings [0|1]"
 - improved unit type mix in front moves
 - new middle click scroll icon

AIs:
 - added various new debug-draw callouts for profiling, state visualization, etc.
 - make sure the Release event always reaches dieing-state AI's
 - added a GetUnitVel callback, returns a unit's velocity vector
 - new Python AI Interface by theGeorge & abma
 - E323AI bug-fixes, logic- and performance enhancements
 - AAI: fix some crashes (one on death) & a logic error
 - RAI, KAIK and AAI: support unit captured&given from&to them
 - RAI, KAIK and AAI: config-, log- & cache-files now compatible with pool archived mods
 - KAIK: switched to .lua config-file format, added a basic mod whitelisting mechanism
 - KAIK: event-based TM updates
 - fix a crash on Skirmish AI death
 - fix Java AI Interface loading on Debian
 - fix Java compilation on some systems
 - fix Java crash: increase initial java heap size (by cranphin)